# DragonFlyBSD

./: .gitattributes  .gitignore  AGENTS.md  COPYRIGHT  Makefile  Makefile.inc1  Makefile.ssh.common  Makefile.upgrade  Makefile_upgrade.inc  README  README.amd64  Readme.md  UPDATING  post-receive  post-receive-email  update
.opencode/agents/: arm64-port-testing.md  build-test.md
contrib/amd/: FREEBSD-Xlist  FREEBSD-upgrade
contrib/awk/: FREEBSD-upgrade  README.DELETED  README.DRAGONFLY  awk.h  b.c  builtin.c  eval.c  field.c  io.c  main.c  node.c  run.c  tran.c
contrib/awk20040207/: DRAGONFLY-upgrade
contrib/awk20050424/: README.DELETED  README.DRAGONFLY
contrib/bc/: FREEBSD-upgrade
contrib/bind/: README.DRAGONFLY
contrib/bind-9.2.4rc7/: README.DELETED  README.DRAGONFLY
contrib/bind-9.3/: CHANGES  README.DELETED  README.DRAGONFLY  version
contrib/bind-9.5.2/: README.DELETED  README.DRAGONFLY
contrib/binutils/: FREEBSD-Xlist  FREEBSD-deletelist  FREEBSD-upgrade  config.guess
contrib/binutils-2.14/: README.DELETED  README.DRAGONFLY
contrib/binutils-2.15/: README.DELETED  README.DRAGONFLY
contrib/binutils-2.17/: README.DELETED  README.DRAGONFLY
contrib/binutils-2.20/: README.DELETED  README.DRAGONFLY
contrib/binutils-2.21/: README.DELETED  README.DRAGONFLY
contrib/binutils-2.22/: README.DELETED  README.DRAGONFLY
contrib/binutils-2.24/: README.DELETED  README.DRAGONFLY
contrib/binutils-2.25/: README.DELETED  README.DRAGONFLY
contrib/binutils-2.27/: README.DELETED  README.DRAGONFLY
contrib/binutils-2.34/: README.DELETED  README.DRAGONFLY
contrib/bmake/: ChangeLog  FILES  Makefile  README.DELETED  README.DRAGONFLY  VERSION  arch.c  bmake.1  bmake.cat1  compat.c  job.c  main.c  make.1  make.h  meta.c  nonints.h  os.sh  parse.c  var.c
contrib/bsdinstaller-1.1.6/: README.DELETED
contrib/bsdtar/: Makefile  README.DELETED  README.DRAGONFLY  bsdtar.1  bsdtar.c  bsdtar_platform.h  read.c  tree.c  tree.h  write.c
contrib/byacc/: CHANGES  README.DELETED  README.DRAGONFLY  closure.c  defs.h  lalr.c  lr0.c  main.c  mkpar.c  output.c  reader.c  verbose.c  warshall.c  yacc.1
contrib/bzip2/: FREEBSD-upgrade  README.DRAGONFLY  bzlib_private.h  decompress.c
contrib/bzip2-1.0/: README.DELETED  README.DRAGONFLY
contrib/com_err/: com_err.3  com_err.h  com_right.h  compile_et.1  getarg.c
contrib/cpio/: FREEBSD-upgrade  copyin.c  main.c
contrib/cryptsetup/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README.DELETED  README.DRAGONFLY  TODO  acinclude.m4  aclocal.m4  config.h  config.h.in  configure  configure.in
contrib/cryptsetup/lib/: Makefile.am  Makefile.in  backends.c  blockdev.h  gcrypt.c  internal.h  libcryptsetup.h  libcryptsetup.pc.in  libcryptsetup.sym  libdevmapper.c  nls.h  setup.c  utils.c  utils_debug.c
contrib/cryptsetup/luks/: Makefile.am  Makefile.in  af.c  af.h  hexprint.c  keyencryption.c  keymanage.c  luks.h  pbkdf.c  pbkdf.h  random.c  random.h
contrib/cryptsetup/man/: Makefile.am  Makefile.in  cryptsetup.8
contrib/cryptsetup/po/: LINGUAS  Makevars  POTFILES.in  cryptsetup.pot  de.gmo  fr.gmo  id.gmo  it.gmo  nl.gmo  sv.gmo  vi.gmo
contrib/cryptsetup/src/: Makefile.am  Makefile.in  cryptsetup.c  cryptsetup.h
contrib/cryptsetup/tests/: Makefile.am  Makefile.in  align-test  api-test.c  compat-test  compatimage.img.bz2  fileDiffer.py
contrib/cvs-1.12/: README.DELETED  README.DRAGONFLY
contrib/cvs-1.12.11/: HACKING  INSTALL  NEWS  README  README.DELETED  TESTS  configure
contrib/cvs-1.12.12/: BUGS  HACKING  NEWS  README  README.DELETED  README.DRAGONFLY  TODO  configure
contrib/cvs-1.12.9/: BUGS  HACKING  NEWS  README.DELETED  README.DRAGONFLY  TODO  configure
contrib/dhcp-3.0/: README  RELNOTES  (+2 more)
crypto/: README
cvsweb/: index.html
data/: .htaccess  index.cgi  index.shtml  menu.ctl  missing.cgi  missing.shtml  stylesheet.css
doc/: AGENTS.md  TODO.nvmm  arm64-efi-loader-mvp-part1.md  linuxkpi-dragonfly-port.md  linuxkpi-freebsd-impl.md  porting_drivers.txt  qcow2_vkernel.txt  vkernel_console.txt  vpagetable_analysis.txt
documentation/: README
dports.base/: GIDs  README.dports.base  UIDs  dsynth.ini  pkg.conf
en/: Makefile
etc/: MAKEDEV  MAKEDEV.local  Makefile  Makefile.usr  amd.map  apmd.conf  auth.conf  crontab  csh.cshrc  csh.login  csh.logout  devd.conf  devices.conf  devtab  dhclient.conf  dm.conf  dntpd.conf  fbtab  ftpusers  gettytab  group  host.conf  hosts  hosts.allow  hosts.equiv  hosts.lpd  inetd.conf  locale.alias  locale.deprecated  login.access  login.conf  man.alias  man.conf  master.passwd  modems  moduli  motd  netconfig  netstart  network.subr  (+46 more)
games/: Makefile  Makefile.inc
gnu/: Makefile
include/: Makefile  a.out.h  alloca.h  ar.h  assert.h  bitstring.h  byteswap.h  complex.h  cpio.h  ctype.h  db.h  dirent.h  disktab.h  dlfcn.h  elf-hints.h  elf.h  endian.h  err.h  float.h  fmtmsg.h  fnmatch.h  fstab.h  fts.h  ftw.h  getopt.h  glob.h  grp.h  histedit.h  iconv.h  ieeefp.h  ifaddrs.h  inttypes.h  iso646.h  kenv.h  langinfo.h  libgen.h  libiberty.h  limits.h  link.h  locale.h  (+73 more)
initrd/: Makefile  Makefile.inc  mkinitrd.sh
kerberos5/: Makefile  Makefile.inc  README
kerberosIV/: Makefile  Makefile.inc
lib/: Makefile  Makefile.inc
libexec/: Makefile  Makefile.inc
llvm_clang/: Makefile
notes/: README  README.notes  committer.txt  compat_laptops.txt  dragonfly_mirrors.txt  porting_drivers.txt  release.txt
nrelease/: Makefile  README  README.pkgsrc  mk.conf.pkgsrc
release/: Makefile  Makefile.inc.docports  fixit.profile  fixit.services  fixit_crunch.conf  write_mfs_in_kernel.c
save/: Dragonfly_BSD.ai  Dragonfly_BSD.eps  Dragonfly_BSD.tif  README  RedDragon.desc
sbin/: Makefile  Makefile.inc
secure/: Makefile  Makefile.inc  Makefile.ssh.common
share/: Makefile  Makefile.inc
src/: tablecg.c  updatefaq  wiki2html
stand/: Makefile
sys/: Makefile  Makefile.modules
test/: test_invariant_tape.c
tools/: README  commit-msg  gitrev.sh  gittemplate  install.sh  make_libdeps.sh  pw-update.sh
usr.bin/: Makefile  Makefile.inc
usr.sbin/: Makefile  Makefile.inc
(+36377 files in other folders)
